--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
-  "dependencies": {
-    "@sveltejs/adapter-static": "^3.0.8"
-  }
+  "name": "latihan",
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "preview": "svelte-kit preview"
+  },
+"devDependencies": {
+  "@sveltejs/vite-plugin-svelte": "^5.0.0",
+  "vite": "^5.0.0",
+  "eslint": "^8.0.0",
+  "prettier": "^3.0.0"
+}
 }
